[package]
name = "xbinary"
version = "0.1.4"
authors = ["luyi <luyikk@126.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/xbinary"
documentation = "https://docs.rs/xbinary/"
description = "bytes extended read write"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bytes="0.5"


